<resources>
    <string name="app_name">Google Full Layout</string>
    <string name="cloudy_72">Cloudy 72º</string>
    <string name="light_traffic_ahead">Light traffic ahead.</string>
    <string name="good_morning">Good morning!</string>
    <string name="assistant">Assistant</string>
    <string name="foto_de_ti">Foto de ti</string>
    <string name="navfoto">NavFoto</string>
    <string name="playfoto">PlayFoto</string>
    <string name="navigate">Navigate</string>
    <string name="make_a_call">Make a call</string>
    <string name="play">Play</string>
    <string name="foto_tuya">Foto tuya</string>
    <string name="telffoto">TelfFoto</string>
    <string name="just_for_you">Just for you</string>
    <string name="navfotojy">NavFotoJY</string>
    <string name="_12_min">12 min</string>
    <string name="to_tacolicious">to Tacolicious</string>
    <string name="via_us_101_south">via US 101 South</string>
    <string name="juanymedio">JuanYMedio</string>
    <string name="thomas_williams">Thomas Williams</string>
    <string name="fotomissed">FotoMissed</string>
    <string name="missed_call">Missed call</string>
    <string name="playbutton">PlayButton</string>
    <string name="little_manila">Little Manila</string>
    <string name="long_distance">Long Distance</string>
    <string name="resume_from_quot_kitchen_club_quot">Resume from \"Kitchen Club\"</string>
    <string name="navarrow">NavArrow</string>
    <string name="todo">TODO</string>
    <string name="micgo">micgo</string>
</resources>